src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A71.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A71 {

	class A;
	class B;
	
	association assoc1 A -> B;
	association A <- B;
	association A <-> B;
	association A -- B;
}
