src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3011.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3011 {

	class A;
	class B;
	
	<<theStereoType>> association assoc1 A -> B;
	<<theStereoType>> association A <- B;
	<<theStereoType>> association A <-> B;
	<<theStereoType>> association A -- B;
}